--- a/Bai06/Bai06.vcxproj
+++ b/Bai06/Bai06.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{e83fa0e7-91c4-46a1-9243-8cfd0a7e96ab}</ProjectGuid>
+    <ProjectGuid>{bfbec1c0-0ef0-4834-a9a4-a30942def2f5}</ProjectGuid>
     <RootNamespace>Bai06</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -128,6 +128,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Bai06.cpp" />
+    <ClCompile Include="cKhachA.cpp" />
+    <ClCompile Include="cKhachB.cpp" />
+    <ClCompile Include="cKhachC.cpp" />
+    <ClCompile Include="cKhachHang.cpp" />
+    <ClCompile Include="cListKhachHang.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="cKhachA.h" />
+    <ClInclude Include="cKhachB.h" />
+    <ClInclude Include="cKhachC.h" />
+    <ClInclude Include="cKhachHang.h" />
+    <ClInclude Include="cListKhachHang.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
